# hugging-face-translate

./: .pdm.toml  README.md  hugging_face_demo.py  push_hugging_face_translate.bat  pyproject.toml
